# black-friday

./: .gitignore  Makefile  README.md  export.txt  go.mod  go.sum  main.go  main.py  pyproject.toml  setup.cfg  setup.py
advocate/: main.go
agent/: agent.go
api/: api.pb.go  api.proto  api_grpc.pb.go  status.go
cmd/explore/: cmd.go
cmd/export/: cmd.go
cmd/perf/: cmd.go  run.go
cmd/stress/: cmd.go  env.go
cmd/subject/: cmd.go  run.go  subject.go
cmd/test/: cmd.go  run.go  seq.go  subject.go
design/: channels.md  deploy.md  separation.md
design/.obsidian/: app.json  appearance.json  workspace.json
env/node/: ctrl_c.go  env.go  tx.go
env/panda/: es.go
env/pipe/: connect.go  mem.go
env/rnd/: rnd.go  seed.go
env/specs/: compare.go  dispatch.go  env.go  io.go  io_test.go  print.go  run.go  tx.go
env/tracer/: bank.go  event.go  tracer.go
env/uid/: uid.go
event/: store.go
fail/: codes.go  extract.go
fx/: es.go  explore.go  tx.go
inventory/: app.go  apply.go  context.go  dispatch.go  err.go  inventory.go  locations.go  products.go  schema.go  schema.sql  service.go  store.go  tx.go  util.go
inventory/api/: api.pb.go  api.proto  (+3 more)
lib/: qa.sh  send.py
protos/: ch1.pb.go  ch1.proto  ch1_grpc.pb.go  ch7.proto
qa/: specs.go  test.txt
schema/: events_grpc.pb.go
sdk-go/: go.mod  main.go
seq/: compare.go  compare_test.go  test.pb.go  test.proto
specs/: compare.go  env.go  print.go  registry.go  run.go  spec.go  tx.go
stat/: status.go
tests/: crazy_test.go  first_specs.go  issues.go  registry.go  simple_test.go  spec_test.go
(+45 files in other folders)
