[metadata]
name = pico


[options]
# src layout. Also options.packages.find below
package_dir=
    =src-qa
packages=find:


zip_safe = False

platforms = any
include_package_data = True
python_requires = >=3.9

install_requires =
    pytest
    grpcio
    # dev experience
    mypy-protobuf
    types-protobuf
    grpcio-tools

[options.entry_points]
console_scripts =
    run = qa.main:main

[options.packages.find]
where=src-qa




[bdist_wheel]
universal = 1
